# xyzzy-rs

./: Cargo.toml  Makefile  README.md  rustfmt.toml
src/: main.rs
